--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 5000
+MONGO_URI = mongodb+srv://Authentic48:BeMQE6hayiNKPff@cluster0.m3pbr.mongodb.net/ecommerceDB?retryWrites=true&w=majority
