--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,9 +7,9 @@ steps:
   id: 'build-image-ecommerce'
   timeout: 500s
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/myapp:$COMMIT_SHA']
+  args: ['push', 'gcr.io/$PROJECT_ID/ecommerce:$COMMIT_SHA']
   id: 'push-image-to-container-registry'
-  waitFor: ['build-image-myapp']
+  waitFor: ['build-image-ecommerce']
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - 'run'
